--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -101,7 +101,20 @@
     max-width: 100%;
     height: auto;
   }
-
+  .project-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  .brs-close {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
   .title-container {
     display: flex;
     flex-direction: column;
@@ -110,11 +123,20 @@
     text-align: center;
     gap: 1rem;
   }
+
   .title {
     color: #004684;
     font-size: 1.4em;
   }
-  
+
+  .subtitle {
+    color: #004684;
+    font-size: 1.3em;
+    white-space: normal;
+  }
+  .project-name {
+    font-weight: bold;
+  }
   .secondary-text {
     color: #666;
   }
@@ -198,6 +220,7 @@
     flex-direction: column;
     align-items: center;
   }
+  
   .bsr-mobile-container {
     display: flex;
     flex-direction: column;
