--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -586,12 +586,20 @@ height: 54px;" cdkDragHandle> </div>
 
 
                         <!-- TEXT_AREA COLUMN-->
-                        <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
-                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'"
-                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
-                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
-                            class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
+                        <textarea *ngIf="y !== 0 && columnName.includes('Comments')"
+                        cdkTextareaAutosize
+                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                        [cdkAutosizeMaxRows]="10" 
+                        [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
+                        [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'"
+                        [style.textAlign]="'center'"
+                        [style.border]="'1px solid #dddddd'"
+                        class="row-box"
+                        [style.height]="'132px'"
+    
+                        [(ngModel)]="testName[columnName]">
+              </textarea>
+
 
 
                         <img class="row-box" style="width: 300px;" [src]="testName[columnName]"
