--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -264,7 +264,7 @@
 .row-box {
   border: none;
   // max-width: 300px;
-  height: 30px !important;
+  min-height: 30px !important;
 }
 
 .rationale-box {
