--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -483,12 +483,22 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             [name]="'rate' + y" [checked]="testName[columnName]"
                             (change)="saveRadioColumValue(columnName, y)">
                         <!-- TEXT_AREA COLUMN COMMENTS-->
-                        <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
-                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'"
-                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
-                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
-                            class="row-box" [(ngModel)]="testName[columnName]"></textarea>
+                        <textarea *ngIf="y !== 0 && columnName.includes('Comments')"
+                        cdkTextareaAutosize
+                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                        [cdkAutosizeMaxRows]="10" 
+                        [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
+                        [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'"
+                        [style.textAlign]="'center'"
+                        [style.border]="'1px solid #dddddd'"
+                        class="row-box"
+                        [style.height]="'132px'"
+
+                        [(ngModel)]="testName[columnName]">
+              </textarea>
+              
+
+                            
                         <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
                         <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                       columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
