--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -16,7 +16,7 @@
   width: 40%;;" (click)="saveNewName()">Save </button>
 </div>
 
-<div *ngIf="true" class="" style="position: absolute;z-index: 1;width: 138vh;">
+<div *ngIf="true" class="" style="position: absolute;z-index: 1;">
 
   <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
   <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Basic Project Information</div>
