--- a/src/app/bmx/components/participants-email/participants-email.component.scss
+++ b/src/app/bmx/components/participants-email/participants-email.component.scss
@@ -1,3 +1,7 @@
+.invite{
+    margin: 20px 0 60px 0;
+}
+
 @media (max-width: 1720px) {
 
     // .container {
@@ -8,7 +12,6 @@
     // }
     .options {
         display: flex;
-        flex-direction: column !important;
     }
 
     .email-container {
@@ -29,7 +32,6 @@
     // }
     .options {
         display: flex;
-        flex-direction: column !important;
     }
 
     .email-container {
@@ -49,7 +51,7 @@
         gap: 5%;
         max-width: 100%;
         padding: 0;
-        flex-direction: column-reverse;
+        flex-direction: column;
         display: flex;
         gap: 5%;
         max-width: 100%;
@@ -59,7 +61,7 @@
     }
 
     .participants-container {
-        width: 60%;
+        width: 95%;
         margin-bottom: 40px;
     }
 }
