Changes in styles

--- a/src/app/bmx/components/project-information/project-information.component.scss
+++ b/src/app/bmx/components/project-information/project-information.component.scss
@@ -39,7 +39,7 @@
   visibility: visible;
 }
 
-.selectLabels{
+.selectLabels {
   // width: 100%;
 }
 
@@ -99,20 +99,55 @@ table {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+.buttons-container {
+  display: flex;
+  gap: 12px;
+  height: 100%;
+  position: relative;
+  top: -9px;
+}
+
+
+
+.directors-container {
+  display: flex;
+  gap: 6%;
+}
+
 @media screen and (max-width: 1203px) {
   .row-field {
     display: flex;
-    flex-direction: column;
     margin-left: 96px;
     align-items: baseline;
     gap: 2px;
   }
+
   .information-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-left: 96px;
     align-items: baseline;
+  }
+
+  .buttons-container {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    height: 100%;
+    position: relative;
+    top: 5px;
+  }
+
+  .directors-container {
+    display: flex;
+    gap: 6%;
+    flex-direction: column;
+  }
+
+  .bottom-row {
+    gap: 121px;
+
   }
 
 }
@@ -125,8 +160,10 @@ table {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
-  z-index: 1000; /* Asegura que el fondo esté por encima de otros elementos */
+  background: rgba(0, 0, 0, 0.5);
+  /* Fondo oscuro con opacidad */
+  z-index: 1000;
+  /* Asegura que el fondo esté por encima de otros elementos */
 }
 
 /* Estilo para el modal */
@@ -135,11 +172,13 @@ table {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 65%; /* Ajusta según tus necesidades */
+  width: 65%;
+  /* Ajusta según tus necesidades */
 
   background-color: white;
   padding: 10px 20px 20px 20px;
-  z-index: 2000; /* Asegura que el modal esté por encima del fondo oscuro */
+  z-index: 2000;
+  /* Asegura que el modal esté por encima del fondo oscuro */
 }
 
 .modal-content {
@@ -154,7 +193,7 @@ table {
 
 }
 
-.modal-content{
+.modal-content {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -163,10 +202,10 @@ table {
 }
 
 /* TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
-::ng-deep .mat-select-value .edit-icon{
+::ng-deep .mat-select-value .edit-icon {
   display: none !important;
 }
 
-input{
+input {
   border: none;
 }
