--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -46,7 +46,8 @@
           <mat-form-field appearance="outline">
             <mat-label>Enter Project Name</mat-label>
             <input type="text" matInput formControlName="bmxProjectName" (input)="replaceInvalidCharacters($event)">
-            <p *ngIf="bmxProjectName.invalid && bmxProjectName.dirty">Project Name is required. Only A-Z, a-z, 0-9 allowed</p>
+            <p *ngIf="bmxProjectName.invalid && bmxProjectName.dirty">Project Name is required. Only A-Z, a-z, 0-9
+              allowed</p>
           </mat-form-field>
         </div>
 
@@ -82,6 +83,7 @@
             </mat-select>
           </mat-form-field>
         </div>
+
         <div class="row-field">
           <label class="selectLabels">Region</label>
           <mat-form-field appearance="outline">
@@ -104,6 +106,7 @@
             </mat-select>
           </mat-form-field>
         </div>
+
         <div class="row-field">
           <label class="selectLabels">Template</label>
           <mat-form-field appearance="outline">
@@ -111,7 +114,8 @@
             <mat-select [(ngModel)]="templateName" (selectionChange)="templateSelected($event.value)"
               formControlName="bmxTemplates">
               <mat-select-trigger>{{selectedTemplateName}}</mat-select-trigger>
-              <mat-option *ngFor="let template of TEMPLATES " [value]="template.templateName"  (click)="selectedTemplateName= template.displayName? template.displayName : template.templateName"
+              <mat-option *ngFor="let template of TEMPLATES " [value]="template.templateName"
+                (click)="selectedTemplateName= template.displayName? template.displayName : template.templateName"
                 style="display: flex; justify-content: space-between">
                 <span style="    display: flex;
                 justify-content: space-between;
@@ -131,37 +135,40 @@
     <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Manage Directors</div>
 
     <div style="display: flex;flex-direction: column;">
-      <div class="row-field">
-        <label class="selectLabels">Regional Directors</label>
-        <mat-form-field appearance="outline">
-          <mat-label>Select Region</mat-label>
-          <mat-select [(ngModel)]="bmxRegionalDirectorDropdown" formControlName="bmxRegionalOffice"
-            (selectionChange)="officeSelected(bmxRegionalDirectorDropdown)">
-            <mat-option *ngFor="let settingsList of settingsData.OfficeList" [value]="settingsList">
-              {{settingsList != 'Seattle'&&settingsList}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+      <div class="row-field bottom-row" style="align-items: center; justify-content: flex-start;">
+        <div class="directors-container">
+          <label class="selectLabels" style="width: 144px; padding-top: 15px;">Regional Directors</label>
+          <mat-form-field appearance="outline">
+            <mat-label>Select Region</mat-label>
+            <mat-select [(ngModel)]="bmxRegionalDirectorDropdown" formControlName="bmxRegionalOffice"
+              (selectionChange)="officeSelected(bmxRegionalDirectorDropdown)">
+              <mat-option *ngFor="let settingsList of settingsData.OfficeList" [value]="settingsList">
+                {{settingsList != 'Seattle'&&settingsList}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <mat-form-field appearance="outline">
-          <mat-label>Director</mat-label>
-          <mat-select [(ngModel)]="dName" formControlName="bmxRegionalDirector">
-            <mat-option *ngFor="let directorName of currentDirectorList" [value]="directorName.name">
-              {{directorName.name}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <button mat-mini-fab style="background-color:#063074;outline: none;" matTooltip="add director"
-          matTooltipPosition="above" (click)="createDirector()">
-          <mat-icon class="full-icon" style="color: white;">add</mat-icon>
-        </button>
-        <button mat-mini-fab style="background-color:#ee7f25;outline: none;" matTooltip="add new user"
-          matTooltipPosition="above" (click)="createCustomDirector()">
-          <mat-icon class="full-icon" style="color: white;">highlight_alt</mat-icon>
-        </button>
-        <button mat-raised-button color="success" style="background-color:#063074;color: white;"
-          (click)="saveProjectInfo()">Next </button>
+          <mat-form-field appearance="outline">
+            <mat-label>Director</mat-label>
+            <mat-select [(ngModel)]="dName" formControlName="bmxRegionalDirector">
+              <mat-option *ngFor="let directorName of currentDirectorList" [value]="directorName.name">
+                {{directorName.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="buttons-container" >
+          <button mat-mini-fab style="background-color:#063074;outline: none;" matTooltip="add director"
+            matTooltipPosition="above" (click)="createDirector()">
+            <mat-icon class="full-icon" style="color: white;">add</mat-icon>
+          </button>
+          <button mat-mini-fab style="background-color:#ee7f25;outline: none;" matTooltip="add new user"
+            matTooltipPosition="above" (click)="createCustomDirector()">
+            <mat-icon class="full-icon" style="color: white;">highlight_alt</mat-icon>
+          </button>
+          <button mat-raised-button color="success" style="background-color:#063074;color: white;"
+            (click)="saveProjectInfo()">Next </button>
+        </div>
       </div>
     </div>
   </form>
