--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -56,7 +56,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Enter Company</mat-label>
             <input type="text" matInput formControlName="bmxCompany">
-            <p *ngIf="bmxCompany.invalid && bmxCompany.dirty">Company is required only A-Z, a-z, 0-9 allowed
+            <p *ngIf="bmxCompany.invalid && bmxCompany.dirty">
             </p>
           </mat-form-field>
 
