--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
@@ -418,6 +418,8 @@
 .row-box {
   border: none;
   // max-width: 300px;
+  min-height: 30px !important;
+
 }
 
 .rationale-box {
@@ -439,6 +441,17 @@
   mat-icon {
     color: #324395;
   }
+}
+
+.upload-image-box {
+  position: absolute;
+  width: 62vw;
+  background: #fafafa;
+  z-index: 1;
+  top: -8px;
+  left: 15%;
+  border: #063074 4px solid;
+  z-index: 20;
 }
 
 .image-row {
