--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
@@ -222,6 +222,8 @@
 .row-box {
   border: none;
   // max-width: 300px;
+  min-height: 30px !important;
+
 }
 
 .rationale-box {
@@ -363,6 +365,14 @@ mat-form-field {
   bottom: -2;
 }
 
+.example-handle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  cursor: move;
+  height: 25px;
+  width: 100%;
+}
 // INPUT RANGE STYLE
 
 input[type="range"] {
