--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -20,7 +20,7 @@
         flex-direction: row;
         justify-content: start;background: #ffffffd9;
         gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;">
-        
+
         <!-- NAME CANDIATES -->
         <div style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">candidates
@@ -46,7 +46,8 @@
                 [value]="bmxItem.componentSettings[0].rateWidth">
         </div>
         <!-- COMMENTS -->
-        <div *ngIf="columnsNames.includes('Comments0')" style="display: flex;flex-direction: column;align-items: center;">
+        <div *ngIf="columnsNames.includes('Comments0')"
+            style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">comments
             </p>
             <input type="range" style="margin: 20px;width: 50px;"
@@ -134,7 +135,7 @@
             matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
-        <button  (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
+        <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
             matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
         </button>
@@ -482,12 +483,22 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             [name]="'rate' + y" [checked]="testName[columnName]"
                             (change)="saveRadioColumValue(columnName, y)">
                         <!-- TEXT_AREA COLUMN COMMENTS-->
-                        <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
-                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'"
-                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
-                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
-                            class="row-box" [(ngModel)]="testName[columnName]"></textarea>
+                        <textarea *ngIf="y !== 0 && columnName.includes('Comments')"
+                        cdkTextareaAutosize
+                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                        [cdkAutosizeMaxRows]="10" 
+                        [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
+                        [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'"
+                        [style.textAlign]="'center'"
+                        [style.border]="'1px solid #dddddd'"
+                        class="row-box"
+                        [style.height]="'132px'"
+
+                        [(ngModel)]="testName[columnName]">
+              </textarea>
+              
+
+                            
                         <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
                         <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                       columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
@@ -684,16 +695,18 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             [name]="'rate' + y" [checked]="testName[columnName]"
                             (change)="saveRadioColumValue(columnName, y)">
                         <!-- TEXT_AREA COLUMN-->
-                        <div style="display: flex;
-                    justify-content: center;">
-                            <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true && open(y)"
-                                [style.width]="'95%'" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
-                                cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
-                        animation: bounceIn 500ms ease-in forwards;padding: 0 4px;margin-bottom: 10px;" class="row-box"
+                        <div style="display: flex; justify-content: center;">
+                            <textarea *ngIf="y !== 0 && columnName.includes('Comments') == true && open(y)"
+                                [style.width]="'95%'" 
+                                [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                cdkTextareaAutosize 
+                                cdkAutosizeMinRows="1" 
+                                cdkAutosizeMaxRows="10"
+                                style="text-align: center; font-size: 16px; border: 1px solid grey; animation: bounceIn 500ms ease-in forwards; padding: 0 4px; margin-bottom: 10px;" 
+                                class="row-box"
                                 [(ngModel)]="testName[columnName]"
-                                [placeholder]="(columnName=='Comments0')?'comments':(columnName=='Comments1')?'new names':'type here' "
-                                rows="4" cols="50">
-                    </textarea>
+                                [placeholder]="(columnName=='Comments0') ? 'comments' : (columnName=='Comments1') ? 'new names' : 'type here'">
+                            </textarea>
                         </div>
                         <!-- TEST NAME -->
                         <div style="display: flex;align-items: center;justify-content: space-evenly;">
