--- a/src/app/bmx/components/survey-dialog/survey-dialog.component.html
+++ b/src/app/bmx/components/survey-dialog/survey-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="dialog-container">
     <div class="dialog">
-        <h2>Confirmation</h2>
+        <h2>{{title}}</h2>
         <p>{{ dialogText }}</p>
         <button clase="cancel" (click)="cancel()">Cancel</button>
         <button class="confirm" (click)="confirm()">Confirm</button>
