--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -38,9 +38,9 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Office </th>
                     <td mat-cell *matCellDef="let element"> {{element.bmxRegion}} </td>
                 </ng-container>
-                <ng-container matColumnDef="Created">
+                <ng-container matColumnDef="bmxCreated">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Created}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.bmxCreated}} </td>
                 </ng-container>
                 <ng-container matColumnDef="Close">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Close </th>
