--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -14,13 +14,24 @@
   </div>
 </ng-template>
 
-<ckeditor 
-  *ngIf="openSettings && bmxClientPageOverview" 
-  [editor]="Editor" 
-  id="txtTexto" 
+<ckeditor
+  *ngIf="openSettings && bmxClientPageOverview"
+  [editor]="Editor"
+  id="txtTexto"
   class="ckeditorcev"
-  
-  [(ngModel)]="bmxItem.componentText" 
-  [data]="bmxItem.componentText" 
+  [config]="ckconfig"
+  [(ngModel)]="bmxItem.componentText"
+  [data]="bmxItem.componentText"
   [ngModelOptions]="{ updateOn: 'blur' }">
 </ckeditor>
+<!--
+<ckeditor
+  *ngIf="openSettings && bmxClientPageOverview"
+  [editor]="Editor"
+  id="txtTexto"
+  class="ckeditorcev"
+  [config]="ckconfig"
+  [(ngModel)]="bmxItem.componentText"
+  [data]="bmxItem.componentText"
+  [ngModelOptions]="{ updateOn: 'blur' }">
+</ckeditor> -->
