Adde new editor

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+@import '~quill/dist/quill.core.css';
+@import '~quill/dist/quill.bubble.css';
+@import '~quill/dist/quill.snow.css';
+
 app-survey-creation-design {
     /* Estilos específicos para app-survey-creation-design */
     width: 100%;
