--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -1,23 +1,21 @@
 <button *ngIf="openSettings && bmxClientPageOverview" class="cancel"
-  (click)=" replaceBiI_Markers(); openSettings = !openSettings" mat-icon-button>
+  (click)="replaceBiI_Markers(); openSettings = !openSettings" mat-icon-button>
   <mat-icon class="full-icon" style="font-size: 25px;">check_circle</mat-icon>
 </button>
 <button *ngIf="!openSettings && bmxClientPageOverview" mat-icon-button class="edit-icon"
-  (click)="editTextWithEditor();openSettings = !openSettings;">
+  (click)="editTextWithEditor(); openSettings = !openSettings;">
   <mat-icon class="full-icon" style="font-size: 25px;">edit</mat-icon>
 </button>
 
-<div class="paragram-desktop" *ngIf="currentPage == 1 && template== 'tinder' ; else regularTemplate"
+<div class="paragram-desktop ql-editor" *ngIf="currentPage === 1 && template === 'tinder'; else regularTemplate"
   style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
 <ng-template #regularTemplate>
-  <div class="paragram-mobile" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'">
+  <div class="paragram-mobile ql-editor" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'">
   </div>
 </ng-template>
 
-
-
-<ckeditor   *ngIf="openSettings && bmxClientPageOverview" 
-[editor]="Editor" id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
-[(ngModel)]="bmxItem.componentText"   [data]="bmxItem.componentText" 
->
-</ckeditor>
+<quill-editor *ngIf="openSettings && bmxClientPageOverview"
+  [(ngModel)]="bmxItem.componentText"
+  [styles]="{ height: '280px' }"
+  [modules]="editorConfig">
+</quill-editor>
