--- a/src/app/bmx/components/participants-email/participants-email.component.html
+++ b/src/app/bmx/components/participants-email/participants-email.component.html
@@ -64,22 +64,22 @@
         <div class="inputs-container">
             <div class="invite" style="margin-left: 20px;">
                 <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">SEND INVITE</div>
-                <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between; ">
+                <div class="input">
                     <div style="color:#063074;font-size: 20px;margin-right: 20px;">FROM:</div>
                     <input style="width: 458px;" mat-input type="text" placeholder="director@brandinstitute.com"
                         [(ngModel)]="From">
                 </div>
-                <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div class="input">
                     <div style="color:#063074;font-size: 20px;margin-right: 20px;">CC:</div>
                     <input style="width: 458px;" mat-input type="text" placeholder="CC" [(ngModel)]="CC">
                 </div>
-                <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div class="input" >
                     <div style="color:#063074;font-size: 20px;margin-right: 20px;">BCC:</div>
                     <input style="width: 458px;" mat-input type="text"
                         placeholder="creative@brandinstitue.com,director1@brandinstitue.com,direct..."
                         [(ngModel)]="BCC">
                 </div>
-                <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div class="input">
                     <div style="color:#063074;font-size: 20px;margin-right: 20px;">SUBJECT:</div>
                     <input style="width: 458px;" mat-input type="text" placeholder="Subject" [(ngModel)]="Subject">
                 </div>
