--- a/src/app/bmx/components/project-information/project-information.component.scss
+++ b/src/app/bmx/components/project-information/project-information.component.scss
@@ -35,12 +35,14 @@
   visibility: hidden;
 }
 
-.directorCard:hover>.optionButton {
+.directorCard:hover > .optionButton {
   visibility: visible;
 }
 
 .selectLabels {
   // width: 100%;
+  margin-right: 19px;
+  color: #324395;
 }
 
 table {
@@ -78,7 +80,8 @@ table {
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  box-shadow:
+    0 5px 5px -3px rgba(0, 0, 0, 0.2),
     0 8px 10px 1px rgba(0, 0, 0, 0.14),
     0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
@@ -106,8 +109,6 @@ table {
   position: relative;
   top: -9px;
 }
-
-
 
 .directors-container {
   display: flex;
@@ -146,11 +147,8 @@ table {
 
   .bottom-row {
     gap: 121px;
-
   }
-
 }
-
 
 /* Estilo para oscurecer el fondo */
 .modal-background {
@@ -189,7 +187,6 @@ table {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-
 }
 
 .modal-content {
@@ -208,4 +205,3 @@ table {
 input {
   border: none;
 }
-
